REGRESSION (r95852?): Disappearing Border on bugs.webkit.org attachments <table> https://bugs.webkit.org/show_bug.cgi?id=69296

Source/WebCore:

Patch by Konstantin Scheglov <scheglov@google.com> on 2011-10-06
Reviewed by David Hyatt.

Test: fast/table/border-collapsing/cached-69296.html

Remember BorderValue in CollapsedBorderValue by value.
See https://bugs.webkit.org/show_bug.cgi?id=69296#c7 for motivation.

* rendering/style/CollapsedBorderValue.h:
(WebCore::CollapsedBorderValue::CollapsedBorderValue):
(WebCore::CollapsedBorderValue::width):
(WebCore::CollapsedBorderValue::style):
(WebCore::CollapsedBorderValue::exists):
(WebCore::CollapsedBorderValue::isTransparent):
(WebCore::CollapsedBorderValue::operator==):
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::collapsedStartBorder):
(WebCore::RenderTableCell::collapsedEndBorder):
(WebCore::RenderTableCell::collapsedBeforeBorder):
(WebCore::RenderTableCell::collapsedAfterBorder):

LayoutTests:

Patch by Konstantin Scheglov <scheglov@google.com> on 2011-10-06
Reviewed by David Hyatt.

Collapsed borders should not disappear.

* fast/table/border-collapsing/cached-69296-expected.png: Added.
* fast/table/border-collapsing/cached-69296-expected.txt: Added.
* fast/table/border-collapsing/cached-69296.html: Added.

Canonical link: https://commits.webkit.org/85580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96822 268f45cc-cd09-0410-ab3c-d52691b4dbfc